--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "expo": "~50.0.14",
@@ -19,6 +19,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard-with-typescript": "^43.0.1",
