--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "@types/react": "~18.2.45",
     "@types/three": "^0.162.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^7.3.1",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.5",
     "typescript": "*"
   },
   "private": true
