--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-three/fiber": "^8.15.19",
@@ -17,7 +18,9 @@
     "expo-gl": "^13.6.0",
     "expo-status-bar": "~1.11.1",
     "expo-three": "^7.0.0",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
