--- a/app.json
+++ b/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -25,6 +23,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "platforms": ["ios", "android", "web"],
+    "ios": {
+      "bundleIdentifier": "com.mateusdegobi.handtalkproject"
+    },
+    "android": {
+      "package": "com.mateusdegobi.handtalkproject"
     }
   }
 }
