--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,18 +43,17 @@
         "newlines-between": "always"
       }
     ],
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "interface",
-        "format": ["PascalCase"],
-        "custom": {
-          "regex": "^I[A-Z]",
-          "match": true
-        }
-      }
-    ],
     "import/prefer-default-export": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "import/no-unresolved": "off",
+    "react/no-unknown-property": "off",
+    "import/no-mutable-exports": "off",
+    "import/no-extraneous-dependencies": "off",
+    "class-methods-use-this": "off",
+    "lines-between-class-members": "off",
+    "no-useless-constructor": "off",
+    "no-empty-function": "off",
+    "no-restricted-syntax": "off",
+    "no-await-in-loop": "off"
   }
 }
