--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "expo-status-bar": "~1.11.1",
     "expo-three": "^7.0.0",
     "firebase": "^10.9.0",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.1",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "styled-components": "^6.1.8",
     "three": "^0.162.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
     "@types/react": "~18.2.45",
     "@types/three": "^0.162.0",
@@ -45,7 +50,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.4",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "*"
   },
   "private": true
