chore: remove types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "strict": true,
-    "types": ["react-native", "reflect-metadata", "jest", "node"],
+    "types": ["jest", "node"],
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"],
